a3/css/custom.css
/*TODO do something about pictures for widths < 380px*/
#infoPopup{
    max-width: 275px;
    margin-right: 15px;
    font-size: 90%;
}
#avatar-container {
    background: white;
    padding: 3px;
    border-radius: 5px;
    display: inline-block;
}

#avatar {
    width: 100px;
    height: 100px;
    border-radius: 5px;
}

#user-info {
    text-align: center;
    margin-top: 20px;
    margin-bottom: 60px;
}

#card {
    display: inline-block;
    padding: 15px 20px 15px 15px;
    border-radius:10px;
    -moz-border-radius:10px; /* Old Firefox */
    background: #222222;
}

#user-info-text {
    display: inline-block;
    vertical-align: top;
}

#avatar-container {
    margin-right: 5px;
}

#user-stats * {
    text-align: left;
}

.tweetList {
    margin-left:auto;
    margin-right:auto;
}

a.ui-link-inherit{
    cursor: default;
}
/*space @handler away from actual name*/
.user-handler {
    margin-left: 7px;
    color: #a2b8c3;
    cursor: pointer;
}

.user-handler:hover{
text-shadow: 0.5px 0.5px #387bbe;
    transition: all 500ms ease;
}
.ui-li-has-arrow .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li-has-arrow {
    padding-left: 125px;
    padding-right: 20px;
}

.intweet-link{
    color: #a2b8c3 !important;
    cursor: pointer;
}

.intweet-link:visited{ color: #4e7772 !important }

.intweet-link:hover{
    text-shadow: 0.5px 0.5px #387bbe   !important;    /*TODO deal with these !importants -_-*/
    transition: all 500ms ease         !important;
}

/* Hide the chevron icon */
.my-page .ui-listview .ui-icon {
    display: none;
}

.ui-li-thumb{
    height: 100%;
    max-height: 130px;
    max-width: 100px;
}
/*special dimensions for sentinel image*/
#sentinel img{
    height: auto;
    width: 100px;
}
#sentinel{
    overflow: hidden;
}
.ui-li-has-thumb .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li-has-thumb {
    min-height: 79px;
}
.ui-btn-down-a,
.ui-btn{
    background: linear-gradient(#202020, #2C2C2C) repeat scroll 0 0 #222222;
    border: 1px solid #000000;
    color: #FFFFFF;
    font-weight: bold;
    text-shadow: 0 1px 0 #111111;
}

/*TODO figure out why photo popup link stays active, disable*/


/*tweet text colour*/
.my-page .ui-li-desc {
    color: #c0c0c0;
}

.my-page .ui-listview .ui-li.ui-btn {
    background-image: none;
    border-color: #222;     /*box border*/
}

/* Make text wrap. */
.my-page .ui-listview .ui-li-heading,
.my-page .ui-listview .ui-li-desc {
    white-space: normal;
    overflow: visible;
}

/* 768px: 2 column tiled layout.  */
@media all and (min-width: 768px){
    .my-page .ui-content {
        padding: 9px;
    }
    .my-page .ui-listview .ui-li.ui-btn {
        float: left;
        width: 46%; /* 33.3333% incl. 2 x 1.2% margin */
        height: 245px;
        margin: 9px 1.2%;
        border-width: 0; /* The 1px border would break the layout so we set it on .ui-btn-inner instead. */
    }
    /* If you don't want a border at all, just set "border: none;" here to negate the semi white top border */
    .my-page .ui-listview .ui-li.ui-btn-inner {
        border: none;
        border-width: 1px;
        margin: -1px;
    }
    .my-page .ui-listview .ui-btn-inner,
    .my-page .ui-listview .ui-btn-text,
    .my-page .ui-listview .ui-link-inherit,
    .my-page .ui-listview .ui-li-thumb{
        width: 100%;
        height: 100%;
        display: block;
        overflow: hidden;
    }
    .my-page .ui-listview .ui-link-inherit {
        padding: 0 !important;
        position: relative;
    }
    /* rounded corners on <li> tiles */
    .my-page .ui-listview .ui-li,
    .my-page .ui-listview .ui-btn-text,
    .my-page .ui-listview .ui-link-inherit,
    .my-page .ui-listview .ui-li-thumb {
        border-radius: inherit;
    }
    .my-page .ui-listview .ui-li-thumb {
        margin: auto;
        max-height: 74%;
        max-width: 51%;
        right: -35%;
        top: 15px;
        width: auto;
        z-index: -1;
    }

    /* Semi transparent background on tweet text, some positioning */
    .ui-listview .ui-li-has-thumb .ui-li-desc {
        background: #6a6a6a;
            background: rgba(0,0,0,.8);
        background-clip: padding-box;
    }


   .ui-listview .ui-li-has-thumb .ui-li-heading {
    /*   background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8);*/
       border-radius: inherit;
       padding: 10px;
       position: absolute;
       text-align: center;
       max-width:50%;
       top: 15px;
       z-index: 1;

   }
    .user-handler {
         padding-top: 5px;
        display: block;
     }

    .ui-listview .ui-li-has-thumb .ui-li-desc {
        bottom: 23px;
        left: 0;
        line-height: 1.5;
        margin: 0;
        min-height: 22%;
        padding: 10px;
        position: absolute;
        right: 0;
    }

    /* slight black glow all the time */
    .my-page .ui-listview .ui-btn {
        box-shadow: 0px 0px 9px #111;
    }
    /* Blue glow on Hover. */
    .my-page .ui-listview .ui-btn:hover,
    .my-page .ui-listview .ui-btn:active{
        box-shadow: 0px 0px 12px #387bbe;
    }
    /* Slow down focus glow */
    .my-page .ui-listview .ui-btn {
        transition: all 500ms ease;
    }
    #sentinel p{
        text-align: center;
        font-size: 120%;
    }
    /* ui-li-aside has class .ui-li-desc as well so we have to override some things. */
    .my-page .ui-listview .ui-li-desc.ui-li-aside {
        background: none repeat scroll 0 0 transparent;
        border-bottom-right-radius: inherit;
        border-top-left-radius: inherit;
        bottom: 0;
        color: #C0C0C0;
        left: auto;
        min-height: 0;
        padding: 2px 10px;
        width: auto;
        z-index: 1;
    }
}
/*3 columns*/
@media all and (min-width: 1150px){
    .my-page .ui-listview .ui-li.ui-btn {
        width: 30%; /* 33.3333% incl. 2 x 1.2% margin */
        margin: 9px 1.2%;
        border-width: 0; /* The 1px border would break the layout so we set it on .ui-btn-inner instead. */
    }
}

